# EADConnect_Bot

./: README.md  constants.py  main.py  pyproject.toml
plugins/: message.py
plugins/callbacks/: back_menu_handler.py  calendar_handler.py  exit_handler.py  forum_handler.py  grades_handler.py  help_handler.py  login_handler.py  materials_handler.py  menu_handler.py  notices_handler.py  performance_handler.py  periods_handler.py
plugins/commands/: clear_cache_handler.py  discipline_handler.py  grades_handler.py  help_handler.py  menu_handler.py  notices_handler.py  notifier_handler.py  refresh_handler.py  restart_handler.py  start_handler.py
plugins/helpers/: buttons.py
tests/: generate_grades.py
